[package]
name = "rrenamer"
version = "0.1.0"
authors = ["Krakaw <41575888+Krakaw@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
reqwest = { version = "0.11", features = ["json"]}
serde = "1.0.126"
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
regex = "1"
